--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-   "name":"philkra/elastic-apm-laravel",
+   "name":"jomedia/elastic-apm-laravel",
    "keywords":[  
       "laravel",
       "elastic",
@@ -16,7 +16,7 @@
       "illuminate/http":"5.5.x|5.6.x|5.7.x|5.8.x",
       "illuminate/routing":"5.5.x|5.6.x|5.7.x|5.8.x",
       "illuminate/support":"5.5.x|5.6.x|5.7.x|5.8.x",
-      "philkra/elastic-apm-php-agent":">=6.5.3",
+      "jomedia/elastic-apm-php": "dev-dev as 6.5.4",
       "ramsey/uuid":"^3.0"
    },
    "require-dev":{  
