--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
       "illuminate/http":"5.5.x|5.6.x|5.7.x|5.8.x",
       "illuminate/routing":"5.5.x|5.6.x|5.7.x|5.8.x",
       "illuminate/support":"5.5.x|5.6.x|5.7.x|5.8.x",
-      "jomedia/elastic-apm-php": "dev-dev",
+      "jomedia/elastic-apm-php-agent": "dev-dev",
       "ramsey/uuid":"^3.0"
    },
    "require-dev":{  
