--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
    "description":"A package to integrate Elastic APM into Laravel",
    "license":"MIT",
    "require":{  
-      "php":">= 7.0",
-      "illuminate/database":"5.5.x|5.6.x|5.7.x|5.8.x",
-      "illuminate/http":"5.5.x|5.6.x|5.7.x|5.8.x",
-      "illuminate/routing":"5.5.x|5.6.x|5.7.x|5.8.x",
-      "illuminate/support":"5.5.x|5.6.x|5.7.x|5.8.x",
+      "php":">= 7.2",
+      "illuminate/database":"^6.0",
+      "illuminate/http":"^6.0",
+      "illuminate/routing":"^6.0",
+      "illuminate/support":"^6.0",
       "jomedia/elastic-apm-php-agent": "1.*",
       "ramsey/uuid":"^3.0"
    },
